code refactoring on MLCommonsClientAccessor request
Signed-off-by: Fen Qin <mfenqin@amazon.com>